Cambios generales y nanoglass

--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -27,7 +27,7 @@
 	  \item Velocidad de enfriamiento de 10$^{12}$K/s 
         \end{itemize}
 	\item Velocidad de deformaci\'on: 10$^9$/s.
-	\item Potencial EAM (embedded atom method; Daw,1984) ``alloy'' (Cheng, 2008).
+	\item Potencial EAM (embedded atom method; Daw,1984) ''alloy'' (Cheng, 2008).
     \end{itemize}
     \begin{textblock*}{12cm}(0.5cm,7.5cm) % {block width} (coords)
         \scriptsize{Arman B., Luo S.-N., Germann T.C. and Cağin T., \textit{Phys. Rev. B.}, \textbf{81}, 144201 (2010).\\
@@ -56,7 +56,7 @@
 
 \begin{frame}
  \frametitle{Resultados de las aproximaciones}
- \begin{textblock*}{6cm}(1cm,1.5cm) 
+ \begin{textblock*}{6cm}(0.5cm,1.5cm) 
     
     \begin{table}[htp]
     \begin{center}
@@ -84,12 +84,12 @@
     \end{center}
     \end{table}
  \end{textblock*}
-  \begin{textblock*}{4.7cm}(8cm,2cm)
+  \begin{textblock*}{4.8cm}(7.7cm,2cm)
   \centering
    Para el c\'alculo de propiedades mec\'anicas, suponemos un comportamiento activado t\'ermicamente.
     $y=A_1^{(-T/T_0)}$
   \end{textblock*}
-  \begin{textblock*}{4.7cm}(8cm,6cm)
+  \begin{textblock*}{4.8cm}(7.7cm,6cm)
   \centering
    El coeficiente de correlaci\'on es mayor a 0.9 en todos los casos, lo cual demuestra que la ecuaci\'on propuesta es razonable.
   \end{textblock*}
@@ -254,8 +254,8 @@
   
   \begin{textblock*}{6cm}(0.2cm,6.5cm)
    \centering
-   Son similares a las de nanoalambres de vidrios met\'alicos vistas en Xiao et al. (2012)\\
-   Hay cambio de la secci\'on transversal en tracci\'on
+   Hay cambio de la secci\'on transversal en tracci\'on.\\
+   Son similares a las de nanoalambres de vidrios met\'alicos vistas en Xiao et al. (2012).\\
   \end{textblock*}
   
   \only<1>{
