--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -119,25 +119,29 @@
 
 \begin{frame}
  \frametitle{Producci\'on}
- 
+ \vspace{-0.15cm}
  \begin{block}{}
     \textit{Te\'oricamente, todo l\'iquido podr\'ia convertirse en vidrio a velocidades de enfriamiento suficientemente altas y temperaturas suficientemente bajas evitando el proceso de cristalizaci\'on} \cite{turnbull61}
  \end{block}
  
  %Las t\'ecnicas de fabricaci\'on act\'uan sobre la composici\'on, el volumen y la velocidad de enfriamiento
- \begin{columns}
-  \begin{column}{5cm}
-    \begin{figure}
-      \includegraphics[width=4cm]{Cap_1/melt_spinning_B.png}
-      \caption{Proceso de \textit{Melt Spinnning}}
-    \end{figure} 
-  \end{column}
-  \begin{column}{0.5\paperwidth}
-   \begin{alertblock}{Espesor}
-      El espesor es un limitante. Los vidrios met\'alicos volum\'etricos, o \textit{Bulk Metallic Glasses} en ingl\'es, tienen una secci\'on transversal de por lo menos algunos mil\'imetros
-   \end{alertblock}
-  \end{column}
- \end{columns}
+ \begin{textblock*}{10cm}(1.4cm,4.9cm)
+  \begin{columns}
+    \begin{column}{4cm}
+      \begin{figure}
+	\includegraphics[width=4cm]{Cap_1/melt_spinning_B.png}
+      \end{figure} 
+      \begin{textblock*}{4cm}(1.3cm,8cm)
+	\scriptsize{Proceso de \textit{Melt Spinnning}}
+      \end{textblock*}
+    \end{column}
+    \begin{column}{6cm}
+    \begin{alertblock}{Espesor}
+	El espesor es un limitante. Los vidrios met\'alicos volum\'etricos, o \textit{Bulk Metallic Glasses} en ingl\'es, tienen una secci\'on transversal de por lo menos algunos mil\'imetros
+    \end{alertblock}
+    \end{column}
+  \end{columns}
+ \end{textblock*}
  
 \end{frame}
 
@@ -184,12 +188,17 @@
  \begin{figure}
  \centering
  \includegraphics[width=5cm]{Cap_1/shearbands.png}
- \caption{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de \cite{albe13}}
 \end{figure}
+\begin{textblock*}{\textwidth}(1cm,8.7cm)
+ \centering
+ \scriptsize{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de \cite{albe13}}
+\end{textblock*}
+
 \end{frame}
 
 \begin{frame}
  \frametitle{Objetivos}
+ \vspace{0.5cm}
 \begin{itemize}
  \item Investigar el comportamiento en r\'egimen elasto-pl\'astico en grandes deformaciones de un metal amorfo binario a diferentes temperaturas
  \begin{itemize}
