--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -2,7 +2,7 @@
 
 \graphicspath{{../Figures/}}
 
-\usepackage[utf8]{inputenc} 
+\usepackage[latin1]{inputenc} 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{graphicx}
@@ -56,7 +56,7 @@
 \input{Carac/Carac.tex}
 \input{Nanoparticles/Nanoparticles.tex}
 \input{Nanoglass/Nanoglass.tex}
-\input{Comput/Comput.tex}
+%\input{Comput/Comput.tex}
 \input{Conclusiones/Conclusiones.tex}
 
 %\section{Bibliografía}
