--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -121,7 +121,7 @@
  \frametitle{Producci\'on}
  \vspace{-0.15cm}
  \begin{block}{}
-    \textit{Te\'oricamente, todo l\'iquido podr\'ia convertirse en vidrio a velocidades de enfriamiento suficientemente altas y temperaturas suficientemente bajas evitando el proceso de cristalizaci\'on} \cite{turnbull61}
+    \textit{Te\'oricamente, todo l\'iquido podr\'ia convertirse en vidrio a velocidades de enfriamiento suficientemente altas y temperaturas suficientemente bajas evitando el proceso de cristalizaci\'on} (Turnbull et al, 1961)
  \end{block}
  
  %Las t\'ecnicas de fabricaci\'on act\'uan sobre la composici\'on, el volumen y la velocidad de enfriamiento
@@ -137,12 +137,14 @@
     \end{column}
     \begin{column}{6cm}
     \begin{alertblock}{Espesor}
-	El espesor es un limitante. Los vidrios met\'alicos volum\'etricos, o \textit{Bulk Metallic Glasses} en ingl\'es, tienen una secci\'on transversal de por lo menos algunos mil\'imetros
+	Los vidrios met\'alicos volum\'etricos, o \textit{Bulk Metallic Glasses} en ingl\'es, tienen una secci\'on transversal de por lo menos algunos mil\'imetros.
     \end{alertblock}
     \end{column}
   \end{columns}
  \end{textblock*}
- 
+ \begin{textblock*}{12.6cm}(0.5cm,9.2cm)
+  \scriptsize{Turnbull, D. and Cohen, M., \textit{J. Chem. Phys.}, \textbf{34(1)}, 120-125 (1961)}
+  \end{textblock*}
 \end{frame}
 
 
@@ -151,48 +153,62 @@
  \centering
  Se trata de un material avanzado de ingenier\'ia
  
- 
- \begin{figure}
- \centering
- \begin{tabularx}{\textwidth}{ccc}
- \only<1>{
- \subfloat[Filo est\'andar]{
-    \includegraphics[width=3cm]{Cap_1/blade.png}}
-  &
-  \subfloat[Filo de BMG]{
-    \includegraphics[width=3cm]{Cap_1/BMG-blade.png}}
-  &
-  \subfloat[Joyer\'ia]{
-    \includegraphics[width=3cm]{Cap_1/seamaster.png}}
-  }
-  \only<2>{
-  \subfloat[Deportes]{
-    \includegraphics[width=3cm]{Cap_1/golf.png}}
-  &
-  \subfloat[MEMS]{
-    \includegraphics[width=3cm]{Cap_1/MEMS_A.jpeg}}
-  &
-  \subfloat[MEMS]{
-    \includegraphics[width=3cm]{Cap_1/MEMS_B.jpeg}}
+ \begin{textblock*}{12.6cm}(1.6cm,3cm)
+  \begin{figure}
+  \centering
+  \begin{tabularx}{\textwidth}{cc}
+  \only<1>{
+    \subfloat[Joyer\'ia]{
+      \includegraphics[height=3cm]{Cap_1/seamaster.png}}
+    &
+    \hspace{1cm}
+    \subfloat[Deportes]{
+      \includegraphics[height=3cm]{Cap_1/golf.png}}
     }
- \end{tabularx}
-\end{figure}
+    \only<2>{
+    \subfloat[MEMS]{
+      \includegraphics[height=3cm]{Cap_1/MEMS_A.jpeg}}
+    &
+    \subfloat[MEMS]{
+      \includegraphics[height=3cm]{Cap_1/MEMS_B.jpeg}}
+    }
+    \only<3>{
+     \subfloat[Filo est\'andar]{
+      \includegraphics[height=3cm]{Cap_1/blade.png}}
+      &
+      \hspace{1cm}
+      \subfloat[Filo de BMG]{
+	\includegraphics[height=3cm]{Cap_1/BMG-blade.png}}
+    }
+  \end{tabularx}
+  \end{figure}
+ \end{textblock*}
 \end{frame}
 
 \begin{frame}
  \frametitle{Mec\'anica de deformaci\'on}
- \begin{block}{Bandas de corte}
- Concentraci\'on de deformaci\'on en bandas estrechas, llamadas \textbf{bandas de corte}.
- El crecimiento de estas bandas puede causar la fractura fr\'agil del material \cite{schuh07}.
- \end{block}
- \begin{figure}
+ \begin{textblock*}{11.8cm}(0.5cm,1.8cm)
+  \begin{block}{Bandas de corte}
+  Concentraci\'on de deformaci\'on en bandas estrechas, llamadas \textbf{bandas de corte}.
+  El crecimiento de estas bandas puede causar la fractura fr\'agil del material (Schuh et al, 2007).
+  \end{block}
+ \end{textblock*}
+ \vspace{-0.7cm}
+ \begin{textblock*}{\textwidth}(1cm,4.3cm)
+  \begin{figure}
+  \centering
+  \includegraphics[width=5.5cm]{Cap_1/shearbands.png}
+  \end{figure}
+ \end{textblock*}
+\begin{textblock*}{\textwidth}(1cm,8.2cm)
  \centering
- \includegraphics[width=5cm]{Cap_1/shearbands.png}
-\end{figure}
-\begin{textblock*}{\textwidth}(1cm,8.7cm)
- \centering
- \scriptsize{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de \cite{albe13}}
+ \scriptsize{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de Albe et al, 2013}
 \end{textblock*}
+
+ \begin{textblock*}{12.6cm}(0.5cm,8.9cm)
+ \scriptsize{Schuh, C., Hufnagel, T., and Ramamurty, U., \textit{Acta. Mater.}, \textbf{55(12)}, 4067-4109 (2007)} \\
+ \scriptsize{Albe, K., Ritter, Y., and Şopu, D., \textit{Mech. Mater.}, \textbf{67}, 94–103 (2013)}
+ \end{textblock*}
 
 \end{frame}
 
