--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -31,7 +31,7 @@
 \subtitle{Simulaciones Atom\'isticas}
 \author[Ardiani, Manelli]{Franco Ardiani, Andr\'es A. Manelli}
 \institute[UNCUYO]{Facultad de Ingenier\'ia, Universidad Nacional de Cuyo}
-\date{\today}
+\date{12 de febrero de 2016}
 
 \addtobeamertemplate{frametitle}{\vskip-0.14ex}{} % junta frametitle con la barra de contenidos
 
