--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,7 @@
 \textit{en}\\[0.4cm]
 \facname\\\univname\\[2cm] % Research group name and department name
  
-{\large \today}\\[4cm] % Date
+{\large 12 de febrero de 2016}\\[4cm] % Date
 %\includegraphics{Logo} % University/department logo - uncomment to place it
  
 \vfill
